--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AwesomeProject",
+  "name": "PINsimple",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -16,7 +16,8 @@
     "react-native-navbar": "^1.6.2",
     "react-native-router-flux": "^3.37.0",
     "react-native-searchbar": "^1.7.0",
-    "react-native-vector-icons": "^4.0.0"
+    "react-native-vector-icons": "^4.0.0",
+    "tcomb-form-native": "^0.6.7"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
