--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "15.4.2",
     "react-fontawesome": "^1.5.0",
     "react-native": "^0.42.3",
+    "react-native-autocomplete-input": "^3.1.2",
     "react-native-drawer": "^2.3.0",
     "react-native-form": "^2.1.2",
     "react-native-keychain": "^1.1.0",
@@ -17,6 +18,7 @@
     "react-native-router-flux": "^3.37.0",
     "react-native-searchbar": "^1.7.0",
     "react-native-vector-icons": "^4.0.0",
+    "react-select": "^1.0.0-rc.3",
     "tcomb-form-native": "^0.6.7"
   },
   "devDependencies": {
